--- a/AdamNeumiller_BookWebsite/appsettings.json
+++ b/AdamNeumiller_BookWebsite/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BooksDB;MultipleActiveResultSets=true"
-
+    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\BooksDB.mdf"
+      //AttachDbFilename=Thepath or |DataDirectory|NameofDatabase.mdf
   }
 }
  
