Added some comments

--- a/AdamNeumiller_BookWebsite/appsettings.json
+++ b/AdamNeumiller_BookWebsite/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\BooksDB.mdf"
-      //AttachDbFilename=Thepath or |DataDirectory|NameofDatabase.mdf
+      //AttachDbFilename=Thepath or |DataDirectory|NameofDatabase.mdf THIS IS THE CONNECTION STRING
   }
 }
  
