--- a/AdamNeumiller_BookWebsite/appsettings.json
+++ b/AdamNeumiller_BookWebsite/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\BooksDB.mdf"
+    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ANBooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\ANBooksDB.mdf"
       //AttachDbFilename=Thepath or |DataDirectory|NameofDatabase.mdf THIS IS THE CONNECTION STRING
   }
 }
