Changed to Sql Server DB

--- a/AdamNeumiller_BookWebsite/appsettings.json
+++ b/AdamNeumiller_BookWebsite/appsettings.json
@@ -8,10 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookConnection": "Data Source=BooksAN.sqlite"
-      
-      //"Server=(localdb)\\MSSQLLocalDB;Database=ANBooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\ANBooksDB.mdf"
-      //AttachDbFilename=Thepath or |DataDirectory|NameofDatabase.mdf THIS IS THE CONNECTION STRING
+    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ANBooksDB;MultipleActiveResultSets=true;AttachDbFileName=ANBooksDB.mdf"
+
+    //"Server=(localdb)\\MSSQLLocalDB;Database=ANBooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\ANBooksDB.mdf"
+    //AttachDbFilename=Thepath or |DataDirectory|NameofDatabase.mdf THIS IS THE CONNECTION STRING
   }
 }
  
