--- a/AdamNeumiller_BookWebsite/appsettings.json
+++ b/AdamNeumiller_BookWebsite/appsettings.json
@@ -8,11 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ANBooksDB;MultipleActiveResultSets=true;AttachDbFileName=ANBooksDB.mdf"
+    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ANBooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\ANBooksDB2.mdf"
 
-    //"Server=(localdb)\\MSSQLLocalDB;Database=ANBooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\ANBooksDB.mdf"
-    //AttachDbFilename=Thepath or |DataDirectory|NameofDatabase.mdf THIS IS THE CONNECTION STRING
   }
 }
  
-//Testing
