Changed database to a MySql server

--- a/AdamNeumiller_BookWebsite/appsettings.json
+++ b/AdamNeumiller_BookWebsite/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ANBooksDB;MultipleActiveResultSets=true;AttachDbFileName=|DataDirectory|\\ANBooksDB2.mdf"
+    "BookConnection": "server=database-1.crtizuyemwro.us-east-2.rds.amazonaws.com;uid=admin;pwd=sunglasses;database=dbtest"
 
   }
 }
