--- a/AdamNeumiller_BookWebsite/appsettings.json
+++ b/AdamNeumiller_BookWebsite/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BookConnection": "server=database-1.crtizuyemwro.us-east-2.rds.amazonaws.com;uid=admin;pwd=sunglasses;database=dbtest"
+    "BookConnection": "server=database-1.crtizuyemwro.us-east-2.rds.amazonaws.com;uid=admin;pwd=password123;database=Bookdb"
 
   }
 }
