--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
     commands:
       - echo Publish started on `date`
       - dotnet publish -c Release  -r linux-x64 -o ./build_output ./${PROJECT}/${PROJECT}.csproj --self-contained false
-      #- cp Procfile ./build_output
+      - cp Procfile ./build_output
 artifacts:
   files:
     - '**/*'
