--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,8 +25,11 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: ./build_output
-  discard-paths: no
+    - scripts/**/*
+    - appspec.yml
+
+  #base-directory: ./build_output
+  #discard-paths: no
 reports:
   ${PROJECT}:
     file-format: VisualStudioTrx
